--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <div style="width:800px;" id="firstdiv">
 		    <div class="purple">
                     <p id="splash" class="fancy"></p>
-                    <p>[Monday Aug, 22] School started a week ago, yay! I have a lot of stuff to clarify now. <a href="/stuff/submit/">Click Here.</a></p>
-                    <p>[Monday Aug, 22] More games <a href="/stuff/more/">Here!</a></p>
+                    <p>[Sunday Oct, 9] HAAAHHHAAHAHA! Bryan ISD really thought they were gonna take me down that easily? WELL IM BACK! NOVA'S BACk! (with more games of your liking! :D)
 		</div
                 <br>
                 <script src="https://cdn.logwork.com/widget/countdown.js"></script>
